--- a/hw4/index.css
+++ b/hw4/index.css
@@ -27,32 +27,33 @@ body {
 
 .logo {
   font-size: 1.2em;
-  font-weight: 1.75em;
+  font-weight: 1.75;
   margin-right: 160px;
 }
 
 .pages {
-  font-weight: 0.75em;
+  font-weight: 0.75;
   margin-right: 20px;
 }
 
 .lang {
   margin-left: 90px;
   margin-right: 20px;
+  display: inline-block;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .lang-img {
   height: 32px;
-}
-
-.lang-choice {
-  font-weight: 0.75em;
-  vertical-align: middle;
+  margin-right: 5px;
 }
 
 .arrow {
   height: 12px;
   padding-bottom: 8px;
+  margin-left: 2px;
 }
 
 .login-key,
@@ -84,7 +85,7 @@ body {
 .desc {
   width: 28%;
   font-size: 1.5em;
-  font-weight: 0.7em;
+  font-weight: 0.7;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 40px;
@@ -93,7 +94,7 @@ body {
 .sign-key {
   background-color: #fff;
   color: #ed4c5c;
-  font-weight: 0.75em;
+  font-weight: 0.75;
   padding-top: 15px;
   padding-bottom: 15px;
   padding-right: 52px;
