tables size and dots style editing

--- a/hw3/styles.css
+++ b/hw3/styles.css
@@ -18,12 +18,15 @@ body {
 }
 
 .table {
+  box-sizing: border-box;
   color: #f3f1f1;
   border-style: solid;
   border-color: #6c6c6c;
   border-width: 2px;
   border-radius: 8px;
   margin-bottom: 50px;
+  width: 650px;
+  height: 175px;
 }
 
 img {
@@ -78,4 +81,13 @@ input {
 
 input {
   max-width: 160px;
+}
+
+.dots {
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background-color: #727272;
+  display: inline-block;
+  margin: -1px;
 }
