adding icons and checkboxes

--- a/hw3/styles.css
+++ b/hw3/styles.css
@@ -91,3 +91,11 @@ input {
   display: inline-block;
   margin: -1px;
 }
+
+.icon {
+  width: 15px;
+  height: 15px;
+  display: inline-block;
+  margin-right: 5px;
+  margin-left: -3px;
+}
