--- a/hw4/index.css
+++ b/hw4/index.css
@@ -8,15 +8,17 @@ body {
   font-weight: 400px;
 }
 
+.nav-wrapper {
+  width: calc(100% - 330px);
+  margin-right: auto;
+  margin-left: auto;
+}
 .navbar {
+  width: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
   margin-top: 50px;
-  padding-left: 165px;
-  padding-right: 165px;
-  margin-left: auto;
-  margin-right: auto;
   margin-bottom: 0;
   text-align: center;
 }
@@ -29,11 +31,13 @@ body {
   font-size: 1.2em;
   font-weight: 1.75;
   margin-right: 160px;
+  max-width: 172px;
 }
 
 .pages {
   font-weight: 0.75;
   margin-right: 20px;
+  max-width: 90px;
 }
 
 .lang {
@@ -43,6 +47,7 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
+  max-width: 90px;
 }
 
 .lang-img {
@@ -71,6 +76,7 @@ body {
   padding-bottom: 10px;
   padding-left: 25px;
   padding-right: 25px;
+  max-width: 100px;
 }
 
 .main {
@@ -95,8 +101,6 @@ body {
   background-color: #fff;
   color: #ed4c5c;
   font-weight: 0.75;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  padding-right: 52px;
-  padding-left: 52px;
+  padding: 16px 52px;
+  max-width: 165px;
 }
