--- a/hw5/index.css
+++ b/hw5/index.css
@@ -115,7 +115,7 @@ body {
   position: absolute;
   width: 540px;
   height: 305px;
-  left: 735px;
+  left: 51%;
   top: 117px;
   display: inline-block;
 }
@@ -129,11 +129,11 @@ body {
   box-sizing: border-box;
 }
 .contact {
-  width: 255px;
+  width: 46%;
 }
 
 .name {
-  margin-right: 20px;
+  margin-right: 35px;
 }
 
 .contact-wide {
@@ -141,6 +141,31 @@ body {
   padding-left: 23px;
 }
 
+select {
+  /* styling */
+  display: inline-block;
+  line-height: 1.5em;
+  padding: 0.5em 3.5em 0.5em 1em;
+
+  /* reset */
+
+  margin: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+select.minimal {
+  background-image: linear-gradient(45deg, transparent 50%, gray 50%),
+    linear-gradient(135deg, gray 50%, transparent 50%),
+    linear-gradient(to right, #ccc, #ccc);
+  background-position: calc(100% - 20px) calc(2em + 2px),
+    calc(100% - 15px) calc(2em + 2px), calc(100% - 2.5em) 1.5em;
+  background-size: 5px 5px, 5px 5px, 1px 1.5em;
+  background-repeat: no-repeat;
+}
 .submit {
   background-color: #ed4c5c;
   padding: 17px 34px;
