--- a/hw4/index.css
+++ b/hw4/index.css
@@ -34,7 +34,16 @@ body {
   max-width: 172px;
 }
 
+.pages-list {
+  margin-right: auto;
+  margin-left: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 .pages {
+  text-transform: uppercase;
   font-weight: 0.75;
   margin-right: 20px;
   max-width: 90px;
@@ -43,7 +52,6 @@ body {
 .lang {
   margin-left: 90px;
   margin-right: 20px;
-  display: inline-block;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -58,6 +66,7 @@ body {
 .arrow {
   height: 12px;
   padding-bottom: 8px;
+  padding-top: 8px;
   margin-left: 2px;
 }
 
@@ -86,15 +95,19 @@ body {
 
 .title {
   font-size: 5.15em;
+  margin-bottom: 40px;
+  margin-top: 0;
 }
 
 .desc {
-  width: 28%;
+  width: 35%;
   font-size: 1.5em;
   font-weight: 0.7;
+  line-height: 150%;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 40px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .sign-key {
@@ -103,4 +116,5 @@ body {
   font-weight: 0.75;
   padding: 16px 52px;
   max-width: 165px;
+  margin-top: 40px;
 }
