--- a/hw10/index.css
+++ b/hw10/index.css
@@ -106,6 +106,7 @@ input.form-control {
 .heading-wrapper {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   align-items: baseline;
   margin-bottom: 21px;
 }
@@ -154,6 +155,9 @@ input.form-control {
 .reco-wrapper {
   margin-left: 20%;
   margin-bottom: 79px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .reco-img {
@@ -200,4 +204,30 @@ input.form-control {
   grid-template-columns: repeat(3, auto);
   column-gap: 25px;
   row-gap: 30px;
+}
+
+@media (max-width: 1025px) {
+  .container {
+    grid-template-columns: repeat(2, auto);
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    grid-template-columns: repeat(1, auto);
+  }
+}
+
+@media (max-width: 426px) {
+  .wrap-stat {
+    width: 95%;
+    flex-wrap: wrap;
+  }
+}
+
+@media (max-width: 376px) {
+  .media {
+    display: flex;
+    flex-direction: column;
+  }
 }
