--- a/hw14/css/main.css
+++ b/hw14/css/main.css
@@ -14,6 +14,7 @@ body {
   font-family: "HelveticaNeueLight";
   font-size: 14px;
   letter-spacing: 0.05em;
+  position: relative;
 }
 
 * {
@@ -446,7 +447,8 @@ button {
 }
 
 .reviews .review-author {
-  display: block;
+  display: flex;
+  justify-content: flex-end;
   text-align: right;
   margin: 10px 0 auto 0;
   vertical-align: top;
@@ -575,4 +577,69 @@ footer {
   margin-top: 100px;
   background-color: #333;
   height: 50px;
+}
+
+.preloader {
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background: #e0e0e0;
+  z-index: 100;
+}
+
+.preloader__row {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  width: 70px;
+  height: 70px;
+  margin-top: -35px;
+  margin-left: -35px;
+  text-align: center;
+  animation: preloader-rotate 2s infinite linear;
+}
+
+.preloader__item {
+  position: absolute;
+  display: inline-block;
+  top: 0;
+  background-color: #337ab7;
+  border-radius: 100%;
+  width: 35px;
+  height: 35px;
+  animation: preloader-bounce 2s infinite ease-in-out;
+}
+
+.preloader__item:last-child {
+  top: auto;
+  bottom: 0;
+  animation-delay: -1s;
+}
+
+@keyframes preloader-rotate {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes preloader-bounce {
+  0%,
+  100% {
+    transform: scale(0);
+  }
+
+  50% {
+    transform: scale(1);
+  }
+}
+
+.loaded_hiding .preloader {
+  transition: 0.3s opacity;
+  opacity: 0;
+}
+
+.loaded .preloader {
+  display: none;
 }
